--- a/index.html
+++ b/index.html
@@ -7,6 +7,26 @@
     <link rel="stylesheet" href="natann.css">
 </head>
 <body>
-    <h1>  VOLEIBOL </h1>
+    <h1> VOLEIBOL </h1>
+
+<p>O voleibol ou vôlei é um esporte coletivo praticado em uma quadra dividida
+     por uma rede. Duas equipes disputam a partida com o objetivo de tocar a 
+     bola no campo adversário, a qual deve ser arremessada por cima da rede. 
+     O esporte é um dos mais populares no Brasil e no mundo em termos de praticantes 
+     e audiência.</p>
+     <div class="imgvolei">
+     <img src="voleibas.jpeg">
+    </div>
+<p> Os fundamentos básicos do voleibol são cinco: saque, ataque, bloqueio, levantamento
+     e recepção. Esses fundamentos são técnicas que começaram a ser executados nos jogos e 
+     acabaram se tornando uma prática do vôlei.</p>
+     
+     
+     <img src="fundos.jpeg">
+
+
+
+
+
 </body>
 </html>
