--- a/index.html
+++ b/index.html
@@ -24,8 +24,21 @@
      
      <img src="fundos.jpeg">
 
-
-
+    <p> Regras do voleibol
+    <ul>
+        As principais regras do vôlei são:
+     
+     <li>Cada equipe possui um técnico; </li>
+    <li> Uma partida é constituída de 3 a 5 sets;</li>
+     <li> existe tempo pré-determinado para cada set;</li>
+     <li>Cada set tem um máximo de 25 pontos com uma diferença mínima de 2 pontos;</li>
+     <li>Em caso de empate no final do set (24 x 24), a partida continua até que a 
+      de dois pontos seja atingida (26 x 24, 27 x 25, etc.);</li>
+     <li>Ganha a equipe que vencer três ou dois sets, vai depender do total de sets;</li>
+     <li>Se houver empate nos sets (2x2), o 5º set será decisivo. No entanto, este vai </li>
+    </ul>
+    </p>
+    <img src="takahashi.jpeg">
 
 
 </body>
