--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="natann.css">
+    <link rel="stylesheet" href="marcela.css">
 </head>
 <body>
     <h1> VOLEIBOL </h1>
@@ -17,8 +17,12 @@
      <div class="imgvolei">
      <img src="voleibas.jpeg">
     </div>
-<p> Os fundamentos básicos do voleibol são cinco: saque, ataque, bloqueio, levantamento
-     e recepção. Esses fundamentos são técnicas que começaram a ser executados nos jogos e 
+<p> Os fundamentos básicos do voleibol são cinco: </p>
+    <ul>
+        <li>saque,</li> <li> ataque </li> <li> bloqueio</li> <li> levantamento</li>
+     <li>recepção. </li>
+    </ul>
+     <p>Esses fundamentos são técnicas que começaram a ser executados nos jogos e 
      acabaram se tornando uma prática do vôlei.</p>
      
      
@@ -38,8 +42,16 @@
      <li>Se houver empate nos sets (2x2), o 5º set será decisivo. No entanto, este vai </li>
     </ul>
     </p>
+    <div class="taka">
     <img src="takahashi.jpeg">
+    </div>
+    <p>O vôlei utiliza vários diferentes sistemas de jogo, dentre deles os mais famosos são o 5x1 e o 6x0.</p>
+    <p class="para">esquema tático 5x1 é o mais utilizado atualmente e conta com apenas um levantador. Quando este 
+        jogador estiver na rede, ele tem duas opções de atacantes para distribuir a jogada. Quando estiver no fundo/defesa, ele terá três opções de atacantes na rede.</p>
+<p> Sistema 5x1 é o que usam em competiçôes e torneios, é mais complicado porém mais eficiente.</p>
 
-
-</body>
+        <div class="sisteam">
+        <img src="5x1.jpeg"> 
+</div>
+    </body>
 </html>
